# sealed-secrets-pre-commit

./: .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: seal-secrets.py  seal_secrets.py
