[metadata]
name = sealed-secrets-pre-commit
version = 1.0.0
description = pre-commit hooks for use with Bitnami Sealed Secrets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jenrik/sealed-secrets-pre-commit
author = Jener Rasmussen
author_email = git@jener.me
license = GPL
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.9
install_requires =
    PyYaml

[options.packages.find]

[options.entry_points]
console_scripts =
    seal-secrets = pre_commit_hooks.seal_secrets:main
